<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/log1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/first1"
        android:textSize="20sp"

        />

    <TextView
        android:id="@+id/incorrectemail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/log1"
        android:text="@string/First2"
        android:textSize="20sp"
        android:visibility="gone" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/incorrectemail"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/incorrectpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/email"
        android:text="@string/first3"
        android:textSize="20sp"
        android:visibility="gone" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/incorrectpassword"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/Login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:text="@string/login" />

    <TextView
        android:id="@+id/somethin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/Login"
        android:text="@string/first4"
        android:textSize="20sp" />

    <Button
        android:id="@+id/setup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/somethin"
        android:text="@string/signup"
        android:onClick="setup"
        />


</RelativeLayout>